# muon-blog

./: pyproject.toml
research/: airbench94_muon_simple.py  cifar-weight.ipynb
